--- a/src/update_name.html
+++ b/src/update_name.html
@@ -24,7 +24,7 @@
                 value: ""
             },
             broker: {
-                type: "gateway",
+                type: "gce-X-Display",
                 required: true
             },
             screen: {value:0, validate:RED.validators.number()}
